@@ -1,3 +1,5 @@
+ -- Add ices/icecast support
+ -- Numerous bug fixes
 Asterisk 0.7.2
  -- Countless small bug fixes from bug tracker
  -- DSP Fixes
